--- a/views/404.html
+++ b/views/404.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>techNotes API</title>
+    <title>404 Not Found</title>
   </head>
   <body>
-    <h1>Homepage</h1>
-    <p>Welcome to techNotes.</p>
+    <h1>Sorry!</h1>
+    <p>The resource you have requested does not exist.</p>
   </body>
 </html>
